[package]
name = "croniters"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_croniters"
crate-type = ["cdylib"]

[features]
# must be enabled when building with `cargo build`, maturin enables this automatically
extension-module = ["pyo3/extension-module"]

[dependencies]
chrono = "0.4.39"
crc32fast = "1.4.2"
pyo3 = "0.23.3"
rand = "0.9.0"
regex = "1.11.1"
